CHANGES IN VERSION 1.0.3
-------------------------

    o update `FoldChange.SCArrayAssay()` and `FindMarkers.SCArrayAssay()`

    o fix `subset.SCArrayAssay()`

    o update `RunICA.SCArrayAssay()`, `RunSPCA.SCArrayAssay()`,
      `RunLDA.SCArrayAssay()`, `RenameCells.SCArrayAssay()`,
      `merge.SCArrayAssay()`


CHANGES IN VERSION 1.0.0
-------------------------

    o initial version of SCArray.sat